--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -15,7 +15,7 @@ add_executable(${PROJECT_NAME})
 
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
 
-#target_link_libraries(${PROJECT_NAME} PRIVATE vendor)
+target_link_libraries(${PROJECT_NAME} PRIVATE vendor)
 
 # Compile Definitions
 target_compile_definitions (
